# easyjsonpy

./: .gitignore  README.md  pyproject.toml
docs/: language.md  settings.md
src/easyjsonpy/: __init__.py  config_loader.py  exceptions.py  lang_loader.py
tests/: en.json  es.json  test_config_loader.py  test_lang_loader.py
